plugins/kotlin/idea/tests/testData/multiModuleLineMarker/actualEnumEntries/jvm/jvm.kt
package test

actual enum class <!LINE_MARKER("descr='Has expects in common module'")!>Enum<!> {
    <!LINE_MARKER("descr='Has expects in common module'")!>A<!>,
    <!LINE_MARKER("descr='Has expects in common module'")!>B<!>,
    <!LINE_MARKER("descr='Has expects in common module'")!>C<!>,
    D
}
